--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,7 +17,6 @@ body {
   font-variant: small-caps;
 }
 
-
 .teaser .hero-body {
   padding-top: 0;
   padding-bottom: 3rem;
@@ -25,10 +24,6 @@ body {
 
 .teaser {
   font-family: 'Google Sans', sans-serif;
-}
-
-
-.publication-title {
 }
 
 .publication-banner {
@@ -44,8 +39,6 @@ body {
   object-fit: fit;
 }
 
-.publication-header .hero-body {
-}
 
 .publication-title {
     font-family: 'Google Sans', sans-serif;
@@ -67,9 +60,6 @@ body {
     font-weight: bolder;
 }
 
-.publication-authors {
-}
-
 .publication-authors a {
    color: hsl(204, 86%, 53%) !important;
 }
@@ -82,12 +72,6 @@ body {
   display: inline-block;
 }
 
-.publication-banner img {
-}
-
-.publication-authors {
-  /*color: #4286f4;*/
-}
 
 .publication-video {
     position: relative;
@@ -105,9 +89,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-.publication-body img {
 }
 
 .results-carousel {
@@ -135,3 +116,16 @@ body {
 
 
 
+img.center-image{
+  display: block !important;
+  margin: 0 auto !important;
+}
+
+
+img.blend-img-item{
+    background: #f5f5f5 !important;
+}
+
+img.blend-img-background{
+    mix-blend-mode: multiply !important;
+}
